# End-VLM-data-collector

./: README.md
aggregator/: Cargo.toml
aggregator/src/: lib.rs
app/: Cargo.toml
app/src/: main.rs  pipeline.rs
capture/: Cargo.toml
capture/src/: lib.rs  wgc.rs
compiler/: Cargo.toml
compiler/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
gui/: Cargo.toml  tauri.conf.json
gui/src/: lib.rs  main.rs  tauri_commands.rs
input/src/: lib.rs  rawinput.rs
writer/: Cargo.toml
writer/src/: lib.rs
