[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
aggregator = { path = "../aggregator" }
collector_core = { path = "../core", package = "core" }
writer = { path = "../writer" }
serde_json = "1.0"
capture = { path = "../capture" }
input = { path = "../input" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
] }
