[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../app" }
capture = { path = "../capture" }
collector_core = { path = "../core", package = "core" }
input = { path = "../input" }
serde = { version = "1.0", features = ["derive"] }
zip = "0.6"

[features]
default = []
tauri = ["dep:tauri"]

[dependencies.tauri]
version = "1.5"
optional = true

[[bin]]
name = "collector-gui"
path = "src/main.rs"
required-features = ["tauri"]
