[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "../app" }
capture = { path = "../capture" }
collector_core = { path = "../core", package = "core" }
input = { path = "../input" }
serde = { version = "1.0", features = ["derive"] }
zip = "0.6"

[features]
default = []
tauri = ["dep:tauri"]

[dependencies.tauri]
version = "1.5"
optional = true

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[[bin]]
name = "collector-gui"
path = "src/main.rs"
required-features = ["tauri"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }
